# haskell-sandbox

./: README.md
guess-number/: ChangeLog.md  LICENSE  Main.hs  README.md  guess-number.cabal
minesweeper/: Minesweeper.cabal  README.md
minesweeper/src/: Main.hs  Minesweeper.hs  minesweeper-main.hs
minesweeper/test/: test-minesweeper.hs
