name:                 Minesweeper
version:              0.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               Vincent Hiribarren
maintainer:           vhiribarren@users.noreply.github.com
category:             Game
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable Minesweeper
  main-is:              minesweeper-main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
                      , array
                      , random
  hs-source-dirs:       src
  default-language:     Haskell2010

Test-Suite Minesweeper-test
  type:                 exitcode-stdio-1.0
  main-is:              test-minesweeper.hs
  hs-source-dirs:       test
  build-depends:        base
                      , HUnit	
